[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.3",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
